syntax = "proto3";

package common;

option go_package = "pet-proj/proto/common";

// Общие типы для всех сервисов
message Event {
  string id = 1;
  string type = 2;
  string user_id = 3;
  map<string, string> data = 4;
  string timestamp = 5;
  string source = 6;
}

message Transaction {
  int64 id = 1;
  string timestamp = 2;
  string kafka_status = 3;
  string redis_status = 4;
  int64 duration_ms = 5;
  string service = 6;
  string event_id = 7;
  string error_msg = 8;
  string created_at = 9;
  string updated_at = 10;
}

message HealthStatus {
  string status = 1;
  string timestamp = 2;
  string service = 3;
  map<string, string> services = 4;
}

message Stats {
  string service = 1;
  string status = 2;
  string timestamp = 3;
  map<string, string> metrics = 4;
}

